@@ -440,11 +440,14 @@ $string['turnitindiagnostic'] = 'Enable Diagnostic Mode';
 $string['turnitindiagnostic_desc'] = '<b>[Caution]</b><br />Enable Diagnostic mode only to track down problems with the Turnitin API.';
 $string['autorefreshgrades'] = 'Auto Refresh Grades / Scores';
 $string['autorefreshgrades_help'] = 'By default after each call to Turnitin the Moodle integration plug in will attempt to automatically pull down changes made while in within Turnitin. You can use this option to turn off this feature, however in order to maintain synchronisation between both systems you will need to frequently manually refresh grades and originality scores from within Moodle.';
-$string['yesgrades'] = 'Yes, automatically refresh originality scores and grades';
+$string['yesgrades'] = 'Yes, automatically refresh originality scores and grades';
 $string['nogrades'] = 'No, I will refresh originality scores and grades manually';
 $string['submissionagreementerror'] = 'You must accept the agreement for this submission';
 $string['noxmlwriterlibrary'] = 'To use this plugin you will need to have the PHP XMLWriter extension installed on your server.';
 $string['checkupgrade'] = 'Check for available upgrade';
 $string['checkingupgrade'] = 'Checking for available upgrade';
 $string['usinglatest'] = 'You are using the latest version!';
-$string['useturnitin_mod'] = 'Enable Turnitin for {a}';
+$string['useturnitin_mod'] = 'Enable Turnitin for {$a}';
+$string['usemoodlecert'] = 'Use Moodle SSL certificate';
+$string['usemoodlecert_desc'] = 'This plugin requires your server operating system to have a valid SSL certificate to communicate with Turnitin.<br/>If your operating system does not possess a valid certificate then you will have to use Moodle&#39;s and follow the instructions in the solution at <a href=&#34;http://docs.moodle.org/27/en/SSL_certificate_for_moodle.org&#34;>http://docs.moodle.org/27/en/SSL_certificate_for_moodle.org</a>';
+$string['sslcertificateerror'] = 'You have selected to use Moodle&#39;s SSL certificate but the file is not readable, please follow the instructions in the solution at <a href=&#34;http://docs.moodle.org/27/en/SSL_certificate_for_moodle.org&#34;>http://docs.moodle.org/27/en/SSL_certificate_for_moodle.org</a>';
