@@ -92,6 +92,9 @@ if ($ADMIN->fulltree) {
 
     $ynoptions = array(0 => get_string('no'), 1 => get_string('yes'));
 
+    $settings->add(new admin_setting_configselect('turnitintooltwo/usemoodlecert', get_string('usemoodlecert', 'turnitintooltwo'),
+                       get_string('usemoodlecert_desc', 'turnitintooltwo'), 0, $ynoptions));
+
     $settings->add(new admin_setting_configselect('turnitintooltwo/enablediagnostic', get_string('turnitindiagnostic', 'turnitintooltwo'),
                        get_string('turnitindiagnostic_desc', 'turnitintooltwo'), 0, $ynoptions));
 
