@@ -29,6 +29,7 @@ class turnitintooltwo_comms {
     private $tiiintegrationid;
     private $diagnostic;
     private $langcode;
+    private $usemoodlecert;
 
     public function __construct() {
         $config = turnitintooltwo_admin_config();
@@ -37,6 +38,7 @@ class turnitintooltwo_comms {
         $this->tiiaccountid = $config->accountid;
         $this->tiiapiurl = (substr($config->apiurl, -1) == '/') ? substr($config->apiurl, 0, -1) : $config->apiurl;
         $this->tiisecretkey = $config->secretkey;
+        $this->usemoodlecert = $config->usemoodlecert;
 
         if (empty($this->tiiaccountid) || empty($this->tiiapiurl) || empty($this->tiisecretkey)) {
             turnitintooltwo_print_error( 'configureerror', 'turnitintooltwo' );
@@ -84,6 +86,15 @@ class turnitintooltwo_comms {
 
         if (!empty($CFG->proxybypass)) {
             $api->setProxyBypass($CFG->proxybypass);
+        }
+
+        if ($this->usemoodlecert) {
+            if (!is_readable("$CFG->dataroot/moodleorgca.crt")) {
+                turnitintooltwo_print_error( 'sslcertificateerror', 'turnitintooltwo' );
+            } else {
+                $certificate = realpath("$CFG->dataroot/moodleorgca.crt");
+                $api->setSSLCertificate($certificate);
+            }
         }
 
         return $api;
